# unbrk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  justfile  release-plz.toml  rust-toolchain.toml
.beads/: config.yaml  issues.jsonl
.githooks/: pre-commit
.github/workflows/: ci.yml  dist.yml  release-plz.yml  release-pr.yml
artifacts/hardware-transcripts/2026-03-14/run-01-clean/: events.jsonl
artifacts/hardware-transcripts/2026-03-14/run-02-clean/: events.jsonl
crates/unbrk-cli/: Cargo.toml
crates/unbrk-cli/src/: lib.rs  main.rs
crates/unbrk-cli/tests/: fancy_progress_tty.rs
crates/unbrk-core/: Cargo.toml
crates/unbrk-core/src/: error.rs  event.rs  flash.rs  lib.rs  prompt.rs  recovery.rs  target.rs  transport.rs  uboot.rs  xmodem.rs
crates/unbrk-core/tests/: recovery_fixture_harness.rs
crates/unbrk-core/tests/support/: mod.rs  recovery_fixture_harness.rs
docs/: an7581-uart-recovery-protocol.md  hardware-validation-2026-03-14.md  hardware-validation-2026-03-15.md  initial-plan.md  releasing.md  testing.md  unbrk-recover.tape  valyrian-uart-recovery-protocol.md
docs/agents/: AGENTS.md  rust-guidelines.txt
tests/fixtures/an7581/: README.md
tests/fixtures/valyrian/: README.md
tools/: an7581_uart_recovery.py  valyrian_uart_recovery.py
xtask/: Cargo.toml
xtask/src/: main.rs
