[workspace]
members = ["crates/unbrk-core", "crates/unbrk-cli", "xtask"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.93.1"
version = "0.1.0"

[workspace.dependencies]
anyhow = "=1.0.102"
clap = { version = "=4.6.0", features = ["derive"] }
clap_complete = "=4.6.0"
clap_mangen = "=0.2.33"
indicatif = "=0.18.4"
is-terminal = "=0.4.17"
regex = "=1.12.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serialport = "=4.8.1"
thiserror = "=2.0.18"
tracing = "=0.1.44"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
