[package]
name = "xtask"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
clap_mangen.workspace = true
unbrk-cli = { path = "../crates/unbrk-cli" }
