[package]
name = "unbrk-cli"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "unbrk"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
is-terminal.workspace = true
regex.workspace = true
serde_json.workspace = true
serialport.workspace = true
unbrk-core = { path = "../unbrk-core", version = "0.1.0" }
