[package]
name = "unbrk-core"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serialport.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
